0.11.0/_sources/credits/credits.rst
.. _detailed_credits:

.. This file is generated from ``credits.rst.tmpl`` and ``zenodo.json`` during documentation builds.

Contributors
============

The SpectroChemPy project is developed by a team of researchers and developers
from the "Laboratoire Catalyse et Spectrochimie" (LCS) at the "Université de Caen Normandie" (France).

The main contributors are:

* Arnaud Travert (ORCID: `0000-0002-9579-8910 <https://orcid.org/0000-0002-9579-8910>`_)
* Christian Fernandez (ORCID: `0000-0002-5476-3148 <https://orcid.org/0000-0002-5476-3148>`_)

Other contributions have been made by:


* Guillaume Clet (ORCID: `0000-0001-5999-5880 <https://orcid.org/0000-0001-5999-5880>`_)

* Abdelhafid Ait Blal (ORCID: `0000-0002-1825-0097 <https://orcid.org/0000-0002-1825-0097>`_)

* William Guerin

* Matthias Mailänder

* Sebastian Rejman (ORCID: `0000-0001-7976-6372 <https://orcid.org/0000-0001-7976-6372>`_)

* Vincent Gao


We thank all the users who have reported bugs, suggested improvements,
and contributed to improve the documentation.

Third-party Licenses
====================

- Reading of TOPSPIN NMR files and digital filter removal is based on
  `nmrglue <https://www.nmrglue.com>`_ open sourcepackage.
  [J.J. Helmus, C.P. Jaroniec, Nmrglue: An open source Python package for the analysis of multidimensional NMR data, J. Biomol. NMR 2013, 55, 355-367.
  `doi: 10.1007/s10858-013-9718-x <https://dx.doi.org/10.1007/s10858-013-9718-x>`_]. **nmrglue** is distributed under the BSD-3 License.

- Reading of Opus files uses the
  `brukeropus <https://joshduran.github.io/brukeropus/brukeropus.html>`_ open source software.
  **brukeropus** is distributed under the MIT License.

- Licenses about other works that may be partially included in SpectroChemPy can be
  found in the LICENCES folder as individual files and/or in the source code.